# graph-id-core

./: .codespell.ignorewords  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  README.md  build.py  mkdocs.yml  pyproject.toml
.github/: codecov.yml  dependabot.yml  renovate.json
.github/workflows/: _build.yml  build.yml  codecov.yml  dependabot-automerge.yml  docs.yml  macos-test.yml  open-release-pr.yml  pr_for_release.yml  release-pr.yml  release.yml  test.yml
build_old/lib.linux-x86_64-cpython-311/graph_id/analysis/: graphs.py
cpp/: core.cpp  core.h  graph_id.cpp  graph_id.h  main.cpp  near_neighbor.cpp  near_neighbor.h  structure_graph.cpp  structure_graph.h  wrapper.h
cpp/test/: README.md  benchmark.py  imports.py  profile.py  test_graph_id.py  test_long_distance_graph_id.py  test_loop_graph_id.py  test_main.py  test_near_neighbor.py  test_segfault_simple.py  test_structure_graph.py
docs/: index.md
docs/_stubs/graph_id_cpp/: __init__.py
docs/api/: analysis.md  distance-clustering.md  generator.md  index.md  maker.md
docs/development/: changelog.md  contributing.md
docs/examples/: index.md  machine-learning.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: advanced-configuration.md  basic-usage.md  database-integration.md
examples/: Search_Structures_from_Database.ipynb
examples/machine_learning/: README.md  train.py
graph_id/: __init__.py
graph_id/analysis/: __init__.py  compositional_sequence.py  graphs.py  local_env.py
graph_id/app/: __init__.py  maker.py
graph_id/commands/: gid.py
graph_id/core/: __init__.py  bond_clustering_graph_id.py  distance_clustering_graph_id.py  graph_id.py  long_distance_graph_id.py
graph_id/db/: __init__.py  finder.py
graph_id/tests/: test_graph_id.py  test_long_distance_graph_id.py
graph_id/tests/test_files/: 298 K.cif  mp-1008681.cif  mp-1056418.cif  mp-1056579.cif
ml/: BUILD  check_citation.py  count_dupes.R  plot_data_leakage.R  train.py  train2.py  train3.py
sample/machine_learning/: train.py
src/graph_id/: __init__.py
src/graph_id_py/: __init__.py
src/graph_id_py/analysis/: graphs.py
src/graph_id_py/commands/: gid.py
src/graph_id_py/core/: distance_clustering_graph_id.py  graph_id.py
tests/cpp/: README.md  __init__.py  benchmark.py  imports.py  profile.py  test_distance_clustering_graph_id.py  test_graph_id.py  test_long_distance_graph_id.py  test_loop_graph_id.py  test_main.py  test_maker.py  test_near_neighbor.py  test_structure_graph.py
tests/py/: BUILD  test_db.py  test_distance_clustering_graph_id.py  test_graph_id.py  test_graphs.py  test_local_env.py  test_long_distance_graph_id.py
tests/py/test_files/: 1078 K.cif  298 K.cif  ABW.cif  YFI.cif  graphite_h.cif  h.xyz  h2o.xyz  mp-1008498.cif  mp-1018088.cif  mp-121.cif  mp-1307172.cif  mp-36.cif  mp-611219.cif  pt-slab.cif  structure_for_dimensionality_larsen.cif
