[tool.poetry]
name = "graph-id"
version = "0.1.0"
description = ""
authors = ["Koki Muraoka <muraok_k@chemsys.t.u-tokyo.ac.jp>"]
readme = "README.md"
packages = [{include = "graph_id"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pymatgen = "^2023.6.28"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pysen = {version = "^0.10.4", extras = ["lint"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false
mypy_preset = "strict"
line_length = 119
py_version = "py38"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]