[tool.poetry]
name = "graph-id"
version = "0.1.0"
description = ""
authors = ["Koki Muraoka <muraok_k@chemsys.t.u-tokyo.ac.jp>"]
readme = "README.md"
packages = [{include = "graph_id"}]

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
pybind11 = "2.11.1"
python = ">=3.8.1,<4.0"
pymatgen = "^2023.6.28"
scikit-learn = ">=0.24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0", "pybind11~=2.11.1", "setuptools"]
build-backend = "poetry.core.masonry.api"

